--- a/_posts/2021-08-27-welcome.md
+++ b/_posts/2021-08-27-welcome.md
@@ -11,7 +11,7 @@ Welcome all! This is my personal site hosted on github pages. I will be mostly w
 
 __Brief Introduction__
 
-![Image](/assets/images/avatar/avatar.jpg){:.circle.border.shadow}
+<img class="image image--lg" src="/assets/images/avatar/avatar.jpg"/>{:.circle.border.shadow}
 
 Name: Donny Jenkins
 Pronouns: He/Him
