--- a/_posts/2021-08-27-welcome.md
+++ b/_posts/2021-08-27-welcome.md
@@ -9,14 +9,23 @@ articles:
 
 Welcome all! This is my personal site hosted on github pages. I will be mostly write about tech related stuff I am learning.
 
+<div align="center">
+
+<img class="image image--lg" src="/assets/images/avatar/avatar.jpg"/>
+
 __Brief Introduction__
 
-<img class="image image--lg" src="/assets/images/avatar/avatar.jpg"/>{:.circle.border.shadow}
-
 Name: Donny Jenkins
+
 Pronouns: He/Him
+
 Handle: dojenk
+
 Age: 33
+
 Location: Chattanooga, TN, USA
+
 Current Work: Retail
 
+
+</div>
